--- a/src/app/seguimiento/seguimiento.page.html
+++ b/src/app/seguimiento/seguimiento.page.html
@@ -15,8 +15,8 @@
     <ion-card-content>
       <!-- Información del conductor y vehículo -->
       <div class="status">
-        <p><strong>Conductor:</strong> {{ viaje?.driverName }}</p>
-        <p><strong>Vehículo:</strong> {{ viaje?.vehicleDetails }}</p>
+        <p><ion-icon name="person-circle-outline"></ion-icon> <strong>Conductor:</strong> {{ viaje?.driverName }}</p>
+        <p><ion-icon name="car-sport-outline"></ion-icon> <strong>Vehículo:</strong> {{ viaje?.vehicleDetails }}</p>
       </div>
 
       <!-- Barra de progreso del viaje -->
