--- a/src/app/confirmar-compra/confirmar-compra.page.scss
+++ b/src/app/confirmar-compra/confirmar-compra.page.scss
@@ -20,7 +20,7 @@
     padding: 0; 
 }
 
-.back-button ion-icon, .settings-button ion-icon {
+.back-button ion-icon {
     color: #000000;
 }
 
@@ -36,18 +36,31 @@
     border-radius: 10px;
     --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
-    padding: 10px;
+    padding: 20px;
 
     ion-card-title {
         font-size: 1.5rem;
         color: #333;
+        margin-bottom: 10px;
     }
-  
+
     ion-card-content p {
         font-size: 1rem;
         color: #666;
         margin: 8px 0;
     }
+}
+
+.viaje-detail {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+}
+
+.detail-icon {
+    font-size: 1.4rem;
+    color: #4CAF50;
+    margin-right: 10px;
 }
 
 .confirm-btn {
