Se agregaron loading visuales a estas pages, ademas se implementaron procesos background en la page de seguimiento, y se creo un mensaje de confirmacion en la page de seguimiento para cancelar el viaje.

--- a/src/app/confirmar-compra/confirmar-compra.page.html
+++ b/src/app/confirmar-compra/confirmar-compra.page.html
@@ -38,6 +38,9 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-button expand="block" class="confirm-btn" (click)="confirmarCompra()">Confirmar y Comprar</ion-button>
+  <!-- Botón de confirmación y spinner -->
+  <ion-button *ngIf="!cargando" expand="block" class="confirm-btn" (click)="confirmarCompra()">Confirmar y Comprar</ion-button>
+  <ion-spinner *ngIf="cargando" name="crescent" color="success"></ion-spinner>
 </ion-content>
+
 
