--- a/src/app/seguimiento/seguimiento.page.html
+++ b/src/app/seguimiento/seguimiento.page.html
@@ -31,4 +31,8 @@
       </div>
     </ion-card-content>
   </ion-card>
+
+
+   <!-- Botón para cancelar el viaje -->
+   <ion-button expand="block" color="danger" (click)="confirmarCancelacion()">Cancelar viaje</ion-button>
 </ion-content>
