--- a/src/app/confirmar-compra/confirmar-compra.page.scss
+++ b/src/app/confirmar-compra/confirmar-compra.page.scss
@@ -71,3 +71,9 @@
     margin-top: 20px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
+
+ion-spinner {
+    display: block;
+    margin: 20px auto;
+  }
+  
