--- a/src/app/metodo-pago/metodo-pago.page.html
+++ b/src/app/metodo-pago/metodo-pago.page.html
@@ -77,5 +77,7 @@
     </ion-card>
   </div>
 
-  <ion-button expand="block" class="confirm-btn" (click)="procesarPago()">Confirmar y Pagar</ion-button>
+  <!-- Botón de confirmación y spinner -->
+  <ion-button *ngIf="!cargando" expand="block" class="confirm-btn" (click)="procesarPago()">Confirmar y Pagar</ion-button>
+  <ion-spinner *ngIf="cargando" name="crescent" color="success"></ion-spinner>
 </ion-content>
