Se agrego un mapa para hacer seguir la ruta en tiempo en real, tambien se hizo la validacion para la capacidad del vehiculo.

--- a/src/app/seguimiento/seguimiento.page.html
+++ b/src/app/seguimiento/seguimiento.page.html
@@ -32,7 +32,7 @@
     </ion-card-content>
   </ion-card>
 
-
+  <ion-button expand="block" color="primary" (click)="irAlMapa()">Ver seguimiento en tiempo real</ion-button>
    <!-- Botón para cancelar el viaje -->
    <ion-button expand="block" color="danger" (click)="confirmarCancelacion()">Cancelar viaje</ion-button>
 </ion-content>
