--- a/src/app/seguimiento/seguimiento.page.scss
+++ b/src/app/seguimiento/seguimiento.page.scss
@@ -74,3 +74,11 @@ ion-progress-bar {
     --progress-background: #4CAF50;
     border-radius: 8px;
 }
+
+#map {
+    width: 100%;
+    height: 300px;  // Puedes ajustar la altura según tus necesidades
+    border-radius: 10px;
+    margin-top: 20px;
+  }
+  
