cambios en las coordenas del mapa, y otros arreglos

--- a/src/app/mapa/mapa.page.html
+++ b/src/app/mapa/mapa.page.html
@@ -26,12 +26,11 @@
       <ion-card-title>Detalles del Viaje</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <p><strong>Punto de partida:</strong> Times Square, Nueva York</p>
-      <p><strong>Destino:</strong> Brooklyn, Nueva York</p>
-      <p><strong>Distancia:</strong> 8.5 km</p>
-      <p><strong>Tiempo estimado:</strong> 25 minutos</p>
+      <p><strong>Punto de partida:</strong> Plaza de Armas, Santiago</p>
+      <p><strong>Destino:</strong> Estación Central, Santiago</p>
+      <p><strong>Distancia:</strong> 5.2 km</p>
+      <p><strong>Tiempo estimado:</strong> 15 minutos</p>
     </ion-card-content>
   </ion-card>
-
-  
+   
 </ion-content>
