Se agregaron validaciones nuevas para mejorar la experiencia al usuario, ademas se agregaron 2 paginas nuevas.

--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -48,15 +48,15 @@
   </ion-card>
 
   <div class="icon-cards">
-    <ion-card class="icon-card">
+    <ion-card class="icon-card" (click)="goToAyuda()    ">
       <ion-icon name="help-circle-outline"></ion-icon>
       <h3>Ayuda</h3>
     </ion-card>
-    <ion-card class="icon-card">
+    <ion-card class="icon-card" (click)="goToPago()">
       <ion-icon name="card-outline"></ion-icon>
       <h3>Pago</h3>
     </ion-card>
-    <ion-card class="icon-card">
+    <ion-card class="icon-card" (click)="goToActividad()">
       <ion-icon name="analytics-outline"></ion-icon>
       <h3>Actividad</h3>
     </ion-card>
