--- a/src/app/ofrecer-vehiculo/ofrecer-vehiculo.page.scss
+++ b/src/app/ofrecer-vehiculo/ofrecer-vehiculo.page.scss
@@ -31,30 +31,41 @@
 
 
 .offer-container {
-margin-top: 20px;
-
-ion-item {
-    --background: #fff;
-    --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 15px;
-    border-radius: 8px;
-}
-
-ion-label {
-    font-family: 'Urbanist', sans-serif;
-    color: #666;
-}
-
-ion-input {
-    font-family: 'Urbanist', sans-serif;
-    color: #333;
-}
-
-.offer-btn {
-    --background: #ff9800;
-    font-family: 'Urbanist', sans-serif;
-    border-radius: 8px;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
     margin-top: 20px;
-}
-}
+  
+    ion-item {
+      --background: #fff;
+      --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      margin-bottom: 15px;
+      border-radius: 8px;
+      align-items: center;
+      position: relative;
+    }
+  
+    ion-label {
+      font-family: 'Urbanist', sans-serif;
+      color: #666;
+    }
+  
+    ion-input {
+      font-family: 'Urbanist', sans-serif;
+      color: #333;
+    }
+  
+    .location-btn {
+      position: absolute;
+      right: 10px;
+      color: #ff9800;
+      ion-icon {
+        font-size: 20px;
+      }
+    }
+  
+    .offer-btn {
+      --background: #ff9800;
+      font-family: 'Urbanist', sans-serif;
+      border-radius: 8px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+      margin-top: 20px;
+    }
+  }
