--- a/src/app/configuracion/configuracion.page.scss
+++ b/src/app/configuracion/configuracion.page.scss
@@ -137,5 +137,30 @@ ion-button{
     --background: #e60000; /* Rojo oscuro al pasar el ratón */
 }
 
+.modal-content {
+    padding: 20px;
+  }
+  
+  .modal-title {
+    font-size: 1.5em;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+  
+  .vehicle-added-message {
+    text-align: center;
+    margin-top: 10px;
+    font-weight: bold;
+    color: #4CAF50;
+  }
+  
+  ion-item {
+    margin-bottom: 15px;
+  }
+
+  
+  
+  
+
 
 
